Fix header-related-results alignment due to scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,7 @@ details[open] > .detail {
 	margin: auto;
 	max-height: 250px;
 	overflow-y: auto;
+	scrollbar-gutter: stable both-edges;
 }
 
 .tag {
